examples/test/testpolicy11145.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11145
  namespace: namespace424
spec:
  podSelector:
    matchLabels:
      key48: value34
      key14: value46
      key40: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value21
          key48: value41
          key29: value12
      podSelector:
        matchLabels:
          key37: value29
